@@ -1,0 +1,9 @@
+package org.apache.cayenne.crypto.db;
+
+import org.apache.cayenne.crypto.db.auto._Table7;
+
+public class Table7 extends _Table7 {
+
+    private static final long serialVersionUID = 1L; 
+
+}
