@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data-map xmlns="http://cayenne.apache.org/schema/10/modelMap"
 	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://cayenne.apache.org/schema/10/modelMap http://cayenne.apache.org/schema/10/modelMap.xsd"
+	 xsi:schemaLocation="http://cayenne.apache.org/schema/10/modelMap https://cayenne.apache.org/schema/10/modelMap.xsd"
 	 project-version="10">
 	<property name="defaultPackage" value="org.apache.cayenne.crypto.db"/>
 	<db-entity name="TABLE1">
@@ -32,6 +32,12 @@
 		<db-attribute name="CRYPTO_INT4" type="BLOB"/>
 		<db-attribute name="ID" type="INTEGER" isPrimaryKey="true" isMandatory="true"/>
 	</db-entity>
+	<db-entity name="TABLE7">
+		<db-attribute name="CRYPTO_INT" type="BLOB"/>
+		<db-attribute name="CRYPTO_STRING" type="CLOB"/>
+		<db-attribute name="ID" type="INTEGER" isPrimaryKey="true" isMandatory="true"/>
+		<db-attribute name="TABLE1_ID" type="INTEGER"/>
+	</db-entity>
 	<obj-entity name="Table1" className="org.apache.cayenne.crypto.db.Table1" dbEntityName="TABLE1">
 		<obj-attribute name="cryptoInt" type="int" db-attribute-path="CRYPTO_INT"/>
 		<obj-attribute name="cryptoString" type="java.lang.String" db-attribute-path="CRYPTO_STRING"/>
@@ -58,4 +64,16 @@
 		<obj-attribute name="cryptoInt1" type="long" db-attribute-path="CRYPTO_INT1"/>
 		<obj-attribute name="cryptoInt4" type="int" db-attribute-path="CRYPTO_INT4"/>
 	</obj-entity>
+	<obj-entity name="Table7" className="org.apache.cayenne.crypto.db.Table7" dbEntityName="TABLE7">
+		<obj-attribute name="cryptoInt" type="int" db-attribute-path="CRYPTO_INT"/>
+		<obj-attribute name="cryptoString" type="java.lang.String" db-attribute-path="CRYPTO_STRING"/>
+	</obj-entity>
+	<db-relationship name="table7s" source="TABLE1" target="TABLE7" toMany="true">
+		<db-attribute-pair source="ID" target="TABLE1_ID"/>
+	</db-relationship>
+	<db-relationship name="toTable1" source="TABLE7" target="TABLE1">
+		<db-attribute-pair source="TABLE1_ID" target="ID"/>
+	</db-relationship>
+	<obj-relationship name="table7s" source="Table1" target="Table7" deleteRule="Deny" db-relationship-path="table7s"/>
+	<obj-relationship name="toTable1" source="Table7" target="Table1" deleteRule="Nullify" db-relationship-path="toTable1"/>
 </data-map>
